# aetheria

./: .gitignore  .gitmodules  :w  Cargo.toml
aetheria/: Cargo.toml
aetheria/src/: camera.rs  input.rs  item.rs  main.rs  material.rs  mesh.rs  model.rs  render.rs  renderer.rs  socket.rs  time.rs  transform.rs  ui.rs
aetheria/src/components/: components.rs  craft.rs  gather.rs  interact.rs  inventory.rs  mod.rs  recipe_selector.rs  ui.rs
aetheria/src/data/: inventory.rs  mod.rs
aetheria/src/entities/: copper_ore.rs  crafting_bench.rs  firefly.rs  furnace.rs  grass.rs  mod.rs  player.rs  sun.rs  tree.rs
aetheria/src/scenes/: fireflies.rs  mod.rs  ores.rs  root.rs  trees.rs
aetheria/src/systems/: gather.rs  interact.rs  mod.rs  render.rs  ui.rs
aetheria/src/vulkan/: buffer.rs  command.rs  context.rs  descriptor.rs  device.rs  graphics.rs  image.rs  instance.rs  mod.rs  renderpass.rs  resources.rs  surface.rs  swapchain.rs
arbiter/: Cargo.toml
arbiter/migrations/: 20230904194037_users.sql  20230904194146_characters.sql  20230904194211_items.sql
arbiter/src/: main.rs
assets/: Cargo.toml  build.rs
assets/macros/: Cargo.toml
assets/macros/src/: lib.rs
assets/meshes/: copper_ore.glb  crafting_bench.blend  crafting_bench.blend1  crafting_bench.glb  firefly.glb  furnace.blend  furnace.blend1  furnace.glb  furnace.mtl  grass.glb  player.glb  tree.foliage.mtl  tree.glb  tree.trunk.mtl
assets/shaders/: fragment.glsl  geometry.frag.glsl  grass.frag.glsl  grass.vert.glsl  render.frag.glsl  render.vert.glsl  test.comp.glsl  ui.comp.glsl  ui.frag.glsl  ui.vert.glsl  upscale.frag.glsl  upscale.vert.glsl  vertex.glsl
assets/shaders/compiled/: fragment.spv  geometry.vert.spv  grass.frag.spv  render.frag.spv  render.vert.spv  test.comp.spv  ui.comp.spv  ui.frag.spv  ui.vert.spv  upscale.frag.spv  upscale.vert.spv  vertex.spv
assets/src/: lib.rs
assets/textures/compiled/: font.qoi  noise.qoi  texture.qoi  white.qoi
common/: Cargo.toml
common/src/: item.rs  lib.rs  net.rs
ecs/: Cargo.toml
ecs/macros/: Cargo.toml
ecs/macros/src/: lib.rs
ecs/src/: lib.rs
gltf/: Cargo.toml
gltf/src/: lib.rs
hecs/: Cargo.toml
hecs/macros/: Cargo.toml
hecs/macros/src/: lib.rs
hecs/src/: lib.rs
net/: Cargo.toml
net/src/: lib.rs
vulkan/: Cargo.toml
vulkan/src/: allocator.rs  buffer.rs  command.rs  compute.rs  context.rs  descriptor.rs  device.rs  graphics.rs  image.rs  instance.rs  lib.rs  renderpass.rs  swapchain.rs
