[package]
name = "aetheria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assets = { path = "../assets" }

ash = { version = "0.37.2", features = ["linked"] }
winit = "0.28"
cstr = "0.2.11"
bytemuck = "1.13"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
spirv-builder = "0.5"
