[package]
name = "aetheria"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assets = { path = "../assets" }
gltf = { path = "../gltf" }
vulkan = { path = "../vulkan" }

ash = { version = "0.37.2", features = ["linked"] }
winit = "0.28"
cstr = "0.2.11"
bytemuck = { version = "1.13", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
gpu-allocator = "0.22"
glam = { version = "0.23", features = ["bytemuck"] }
qoi = "0.4"
bevy_ecs = "0.10"