[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.4.0"
num-traits = "0.2.15"
bytemuck = "1.13"
glam = { version = "0.24", features = ["serde"] }
thiserror = "1.0.44"
postcard = "1.0.6"
serde = { version = "1.0.180", features = ["derive"] }
